# libuma

./: CMakeLists.txt  readme.md  style.conf
cmake/: Findcppcheck.cmake  Findlibusb.cmake  Finduncrustify.cmake  cflags.cmake  coverage.cmake  cppcheck.cmake  doxygen.cmake  style.cmake
doc/: Doxyfile  build.md  index.md
include/libuma/: init.h  retcode.h
include/libuma/command/: original.h  raw.inc  type.h  utils.h
include/libuma/device/: handler.h  internal.h  transfer.h  type.h
include/libuma/usb/: device_info.h  message.h  sync.h
src/: init.c  retcode.c
src/command/: original.c  utils.c
src/device/: handler.c  transfer.c
src/usb/: message.c  sync.c
tools/cmd/: main.c
tools/list/: main.c
